// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageHeader /> should adopt any children 1`] = `
<StyledHeader>
  <SpeechBubble
    arrowHeight="4vh"
    arrowPosition="bottom-left"
    backgroundColor="#465a65"
    isGhost={false}
    makeAppear={true}
    showArrowBreakpoint="750px"
  >
    <H2
      color="#aedd2c"
    >
      <div>
        children
      </div>
    </H2>
  </SpeechBubble>
</StyledHeader>
`;

exports[`<PageHeader /> should render and match the snapshot 1`] = `
<StyledHeader>
  <SpeechBubble
    arrowHeight="4vh"
    arrowPosition="bottom-left"
    backgroundColor="#465a65"
    isGhost={false}
    makeAppear={true}
    showArrowBreakpoint="750px"
  >
    <H2
      color="#aedd2c"
    />
  </SpeechBubble>
</StyledHeader>
`;
